Add flags to validate.sh, get package names

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -1,6 +1,9 @@
 {
   "packageDirectories": [
     {
+      "path": "other-app"
+    },
+    {
       "path": "force-app",
       "default": true
     }
